[package]
name = "rust"
authors = ["Tom-the-Bomb"]
description = "Basic algorithms implemented by myself for practice in python and rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tom-the-Bomb/Algorithms"
keywords = ["algorithms"]
categories = ["Algorithms", "Development tools"]

[dependencies]